--- a/Projects Info Pages/ENG/leon.html
+++ b/Projects Info Pages/ENG/leon.html
@@ -30,15 +30,15 @@
             href="/CSS/style.css">
         <link rel="stylesheet"
             href="/CSS/fw.css">
-        <title>OT</title>
+        <title>Leon</title>
     </head>
-<body class="leon-page">
+<body class="project-info-page">
     <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
-    <i class="back fa-solid fa-arrow-left p-abs"></i>
+    <i class="back fa-solid fa-arrow-left p-abs flex-center" title="Back"></i>
     <div class="container">
         <h1 class="txt-center text-upper m-30">leon</h1>
         <div class="content d-flex">
-            <img src="/IMGS/leon-pre.png" alt="">
+            <img src="/IMGS/leon-pre.png" alt="image of design">
             <div class="info">
                 <h2>title: <span>Leon</span></h2>
                 <h2>description: <span>It is the first template I have relied to it for improving myself it is also from <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">Elzero</a> free course. </span></h2>
@@ -51,6 +51,5 @@
         </div>
     </div>
     <script src="/master.js"></script>
-    <script src="/master2.js"></script>
 </body>
 </html>
