--- a/Projects Info Pages/AR/dashboard-ar.html
+++ b/Projects Info Pages/AR/dashboard-ar.html
@@ -30,23 +30,23 @@
             href="/CSS/style.css">
         <link rel="stylesheet"
             href="/CSS/fw.css">
-        <title>Leon</title>
+        <title>Dashboard Info</title>
     </head>
 <body class="project-info-page project-info-page-ar">
     <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
     <i class="back fa-solid fa-arrow-left p-abs flex-center" title="رجوع"></i>
     <div class="container">
-        <h1 class="txt-center text-upper m-30">leon</h1>
+        <h1 class="txt-center text-upper m-30">Dashboard</h1>
         <div class="content d-flex">
-            <img src="/IMGS/leon-pre.png" alt="صورة التصميم">
+            <img src="/IMGS/dash-pre.png" alt="صورة التصميم">
             <div class="info">
-                <h2>العنوان: <span>Leon</span></h2>
-                <h2>الوصف: <span>انه أول تصميم اعتمدت عليه في بدايتي من اجل تطوير نفسي في هذا المجال وهو من تصاميم دورة <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">ايلزيرو</a> المجانية. </span></h2>
-                <h2>نوع التصميم: <span>معرض أعمال</span></h2>
+                <h2>العنوان: <span>Dashboard</span></h2>
+                <h2>الوصف: <span>انه اخر تصميم اعتمدت عليه في بدايتي من اجل تطوير نفسي في هذا المجال وهو من تصاميم دورة <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">ايلزيرو</a> المجانية. </span></h2>
+                <h2>نوع التصميم: <span>لوحة تحكم</span></h2>
                 <h2>التقنيات المستعملة: <span>HTML - CSS</span></h2>
-                <h2>مدة الانهاء: <span>7 أيام</span></h2>
-                <h2>صاحب التصميم: <span><a href="https://www.graphberry.com/" target="_blank">graphberry</a></span></h2>
-                <a class="d-block btn-shape bg-blue c-white text-capa mb-10 mt-10" href="https://easy-c.github.io/Template-01-leon/">معاينة</a>
+                <h2>مدة الانهاء: <span>25 أيام</span></h2>
+                <h2>صاحب التصميم: <span><a href="https://www.instagram.com/Osama_Elzero/" target="_blank">الزيرو</a></span></h2>
+                <a class="d-block btn-shape bg-blue c-white text-capa mb-10 mt-10" href="https://easy-c.github.io/Template-04-Dashboard/">معاينة</a>
             </div>
         </div>
     </div>
