--- a/Projects Info Pages/ENG/ot.html
+++ b/Projects Info Pages/ENG/ot.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar"  style="direction: rtl;">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible"
@@ -30,23 +30,23 @@
             href="/CSS/style.css">
         <link rel="stylesheet"
             href="/CSS/fw.css">
-        <title>Leon</title>
+        <title>OT Info</title>
     </head>
-<body class="project-info-page project-info-page-ar">
+<body class="project-info-page">
     <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
-    <i class="back fa-solid fa-arrow-left p-abs flex-center" title="رجوع"></i>
+    <i class="back fa-solid fa-arrow-left p-abs flex-center" title="Back"></i>
     <div class="container">
-        <h1 class="txt-center text-upper m-30">leon</h1>
+        <h1 class="txt-center text-upper m-30">ot</h1>
         <div class="content d-flex">
-            <img src="/IMGS/leon-pre.png" alt="صورة التصميم">
+            <img src="/IMGS/ot-pre.png" alt="image of design">
             <div class="info">
-                <h2>العنوان: <span>Leon</span></h2>
-                <h2>الوصف: <span>انه أول تصميم اعتمدت عليه في بدايتي من اجل تطوير نفسي في هذا المجال وهو من تصاميم دورة <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">ايلزيرو</a> المجانية. </span></h2>
-                <h2>نوع التصميم: <span>معرض أعمال</span></h2>
-                <h2>التقنيات المستعملة: <span>HTML - CSS</span></h2>
-                <h2>مدة الانهاء: <span>7 أيام</span></h2>
-                <h2>صاحب التصميم: <span><a href="https://www.graphberry.com/" target="_blank">graphberry</a></span></h2>
-                <a class="d-block btn-shape bg-blue c-white text-capa mb-10 mt-10" href="https://easy-c.github.io/Template-01-leon/">معاينة</a>
+                <h2>title: <span>ot</span></h2>
+                <h2>description: <span>It is my personal website and it is not only my first website it also my main website where I show my projects, experiences, services ...</h2>
+                <h2>design type: <span>Portfollio</span></h2>
+                <h2>used technologies: <span>HTML - CSS - JS</span></h2>
+                <h2>completing duree: <span>Pending</span></h2>
+                <h2>design owner: <span><a href="https://www.instagram.com/oussama_talib.8/" target="_blank">oussama</a></span></h2>
+                <a class="d-block btn-shape bg-blue c-white mb-10 mt-10 fs-14"><i class="fa-solid fa-bell mr-5 "></i>You are now in it, because you are browsing the same website</a>
             </div>
         </div>
     </div>
