--- a/Projects Info Pages/AR/product-preview-ar.html
+++ b/Projects Info Pages/AR/product-preview-ar.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../../IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,12 +24,12 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../../CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../../CSS/style.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../../CSS/fw.css">
         <title>Product Preview Info</title>
     </head>
 <body class="project-info-page project-info-page-ar">
@@ -38,7 +38,7 @@
     <div class="container">
         <h1 class="txt-center text-upper m-30">product preview</h1>
         <div class="content d-flex">
-            <img src="/IMGS/product-pre.png" alt="صورة التصميم">
+            <img src="../../IMGS/product-pre.png" alt="صورة التصميم">
             <div class="info">
                 <h2>العنوان: <span>product preview</span></h2>
                 <h2>الوصف: <span>انه فقط من أجل التدريب من ذلك الموقع.</span></h2>
@@ -50,6 +50,6 @@
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
