--- a/Projects Info Pages/ENG/dashboard.html
+++ b/Projects Info Pages/ENG/dashboard.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../..//IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,12 +24,12 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../..//CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../..//CSS/style.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../..//CSS/fw.css">
         <title>Dashboard Info</title>
     </head>
 <body class="project-info-page">
@@ -38,7 +38,7 @@
     <div class="container">
         <h1 class="txt-center text-upper m-30">Dashboard</h1>
         <div class="content d-flex">
-            <img src="/IMGS/dash-pre.png" alt="image of design">
+            <img src="../..//IMGS/dash-pre.png" alt="image of design">
             <div class="info">
                 <h2>title: <span>Dashboard</span></h2>
                 <h2>description: <span>It is the last template I have relied to it for improving myself it is also from <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">Elzero</a> free course. </span></h2>
@@ -50,6 +50,6 @@
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
