--- a/Projects Info Pages/AR/dashboard-ar.html
+++ b/Projects Info Pages/AR/dashboard-ar.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../../IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,21 +24,20 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../..//CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../../CSS/fw.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../../CSS/style.css">
         <title>Dashboard Info</title>
     </head>
 <body class="project-info-page project-info-page-ar">
-    <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
     <i class="back fa-solid fa-arrow-left p-abs flex-center" title="رجوع"></i>
     <div class="container">
         <h1 class="txt-center text-upper m-30">Dashboard</h1>
         <div class="content d-flex">
-            <img src="/IMGS/dash-pre.png" alt="صورة التصميم">
+            <img src="../../IMGS/dash-pre.png" alt="صورة التصميم">
             <div class="info">
                 <h2>العنوان: <span>Dashboard</span></h2>
                 <h2>الوصف: <span>انه اخر تصميم اعتمدت عليه في بدايتي من اجل تطوير نفسي في هذا المجال وهو من تصاميم دورة <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">ايلزيرو</a> المجانية. </span></h2>
@@ -50,6 +49,6 @@
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
