--- a/Projects Info Pages/AR/talib-ar.html
+++ b/Projects Info Pages/AR/talib-ar.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../../IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,12 +24,12 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../../CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../../CSS/style.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../../CSS/fw.css">
         <title>Talib Info</title>
     </head>
 <body class="project-info-page project-info-page-ar">
@@ -37,7 +37,7 @@
     <div class="container">
         <h1 class="txt-center text-upper m-30">talib</h1>
         <div class="content d-flex">
-            <img src="/IMGS/talib-pre.png" alt="صورة التصميم">
+            <img src="../../IMGS/talib-pre.png" alt="صورة التصميم">
             <div class="info">
                 <h2>العنوان: <span>talib</span></h2>
                 <h2>الوصف: <span>انه ثالت تصميم اعتمدت عليه في بدايتي من اجل تطوير نفسي في هذا المجال وهو من تصاميم دورة <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">ايلزيرو</a> المجانية. </span></h2>
@@ -49,6 +49,6 @@
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
