--- a/Projects Info Pages/ENG/ot.html
+++ b/Projects Info Pages/ENG/ot.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../../IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,32 +24,31 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../../CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../../CSS/style.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../../CSS/fw.css">
         <title>OT Info</title>
     </head>
 <body class="project-info-page">
-    <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
     <i class="back fa-solid fa-arrow-left p-abs flex-center" title="Back"></i>
     <div class="container">
         <h1 class="txt-center text-upper m-30">ot</h1>
         <div class="content d-flex">
-            <img src="/IMGS/ot-pre.png" alt="image of design">
+            <img src="../../IMGS/ot-pre.png" alt="image of design">
             <div class="info">
                 <h2>title: <span>ot</span></h2>
                 <h2>description: <span>It is my personal website and it is not only my first website it also my main website where I show my projects, experiences, services ...</h2>
                 <h2>design type: <span>Portfollio</span></h2>
                 <h2>used technologies: <span>HTML - CSS - JS</span></h2>
-                <h2>completing duree: <span>Pending</span></h2>
+                <h2>completing duree: <span>In Progress</span></h2>
                 <h2>design owner: <span><a href="https://www.instagram.com/oussama_talib.8/" target="_blank">oussama</a></span></h2>
                 <a class="d-block btn-shape bg-blue c-white mb-10 mt-10 fs-14"><i class="fa-solid fa-bell mr-5 "></i>You are now in it, because you are browsing the same website</a>
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
