--- a/Projects Info Pages/ENG/talib.html
+++ b/Projects Info Pages/ENG/talib.html
@@ -11,7 +11,7 @@
             The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
             Services, Skills, And His life and bussiness Experience.">
         <link rel="shortcut icon"
-            href="/IMGS/ot-favicon.png"
+            href="../../IMGS/ot-favicon.png"
             type="image /x-icon">
         <!-- GOOGLE FONT -->
         <link rel="preconnect"
@@ -24,21 +24,20 @@
             rel="stylesheet">
         <!-- FONT AWESOME -->
         <link rel="stylesheet"
-            href="/CSS/all.min.css">
+            href="../../CSS/all.min.css">
         <!-- CSS FILES -->
         <link rel="stylesheet"
-            href="/CSS/style.css">
+            href="../../CSS/style.css">
         <link rel="stylesheet"
-            href="/CSS/fw.css">
+            href="../../CSS/fw.css">
         <title>Talib Info</title>
     </head>
 <body class="project-info-page">
-    <!-- <a class="back p-abs c-black" href="/index.html#projects" title="Back"><i class="fa-solid fa-arrow-left"></i></a> -->
     <i class="back fa-solid fa-arrow-left p-abs flex-center" title="Back"></i>
     <div class="container">
         <h1 class="txt-center text-upper m-30">talib</h1>
         <div class="content d-flex">
-            <img src="/IMGS/talib-pre.png" alt="image of design">
+            <img src="../../IMGS/talib-pre.png" alt="image of design">
             <div class="info">
                 <h2>title: <span>talib</span></h2>
                 <h2>description: <span>It is the third template I have relied to it for improving myself it is also from <a href="https://www.instagram.com/Osama_Elzero/" target="_blank">Elzero</a> free course. </span></h2>
@@ -50,6 +49,6 @@
             </div>
         </div>
     </div>
-    <script src="/master.js"></script>
+    <script src="../../master.js"></script>
 </body>
 </html>
