--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green"
-                                href="./Projects Info Pages//ENG/leon.html">info</a>
+                                href="./Projects Info Pages/ENG/leon.html">info</a>
                             <a class="preview btn-shape bg-blue"
                                 href="https://easy-c.github.io/Template-01-leon/"
                                 target="_blank">preview</a>
