--- a/index-ar.html
+++ b/index-ar.html
@@ -267,12 +267,51 @@
                                 target="_blank">معاينة</a> -->
                         </div>
                     </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>العنوان</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">معاينة</a>
+                        </div>
+                    </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>العنوان</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">معاينة</a>
+                        </div>
+                    </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>العنوان</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">معاينة</a>
+                        </div>
+                    </div>
                 </div>
-                <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block "
-                    href="project-page.html"
+                <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block"
+                    id="seeMore"
                     title="اضغط هنا لمشاهدة المزيد من المشاريع">
                     شاهد المزيد
-                    <i class="fa-solid fa-arrow-left mr-10"></i>
+                    <!-- <i class="fa-solid fa-arrow-down mr-10"></i> -->
                 </a>
             </div>
         </section>
