--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body class="both eng">
     <form class="search-page">
-        <i id="cancle-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
+        <i id="cancel-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
         <h1 class="p-abs">Type what are you <br> looking for?</h1>
         <input type="search" id="search-page" placeholder="Search...">
         <button>
@@ -270,12 +270,50 @@
                                 target="_blank">preview</a> -->
                         </div>
                     </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>title</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">info</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>title</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">info</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
+                    <div class="project hiddenItem"
+                        style="background-image: url(); background-color: #ddd;">
+                        <div class="project-title p-abs c-white">
+                            <h2>title</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green"
+                                href="">info</a>
+                            <a class="preview btn-shape bg-blue"
+                                href=""
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
                 </div>
                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block "
-                    href="project-page.html"
-                    title="Click This To See More Projects">see
-                    more
-                    <i class="fa-solid fa-arrow-right ml-10"></i>
+                    id="seeMore" title="Click This To See More Projects">
+                    see more
+                    <!-- <i class="fa-solid fa-arrow-down ml-10"></i> -->
                 </a>
             </div>
         </section>
