--- a/index-ar.html
+++ b/index-ar.html
@@ -35,7 +35,7 @@
 
 <body class="both ar">
     <form class="search-page">
-        <i id="cancle-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
+        <i id="cancel-btn" class="fa-solid fa-xmark p-abs flex-center"></i>
         <h1 class="p-abs">أكتب عن ماذا تبحث ؟</h1>
         <input type="search" id="search-page" placeholder="بحث ...">
         <button>
@@ -310,7 +310,7 @@
                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block"
                     id="seeMore"
                     title="اضغط هنا لمشاهدة المزيد من المشاريع">
-                    شاهد المزيد
+                    شاهد أكثر
                     <!-- <i class="fa-solid fa-arrow-down mr-10"></i> -->
                 </a>
             </div>
